ing/ing-annotations-server-snippet.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ing
  namespace: default
  labels:
    ing: myapp-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: myapp.cyf.com
    http:
      paths:
      - backend:
          serviceName: myapp-svc 
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: default
  labels:
    svc: myapp-svc
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
  selector:
    app: myapp
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-deploy
  namespace: default
  labels:
    deploy: myapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp
      namespace: default
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: cuiyf/myapp:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
