ing/ing-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
  namespace: default
  labels:
    ing: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.cyf.com
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-canary
  namespace: default
  labels:
    ing: myapp-canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
  - host: myapp.cyf.com
    http:
      paths:
      - backend:
          serviceName: myapp-canary
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
  labels:
    svc: myapp
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
  selector:
    app: myapp
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: default
  labels:
    svc: myapp-canary
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
  selector:
    app: myapp-canary
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp
  namespace: default
  labels:
    deploy: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp
      namespace: default
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: cuiyf/myapp:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-canary
  namespace: default
  labels:
    deploy: myapp-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-canary
  template:
    metadata:
      name: myapp-canary
      namespace: default
      labels:
        app: myapp-canary
    spec:
      containers:
      - name: myapp-canary
        image: cuiyf/myapp:v2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
