ing/ing-limit.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
  namespace: default
  labels:
    ing: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "1"
spec:
  rules:
  - host: myapp.cyf.com
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
  labels:
    svc: myapp
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
  selector:
    app: myapp
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp
  namespace: default
  labels:
    deploy: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp
      namespace: default
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: cuiyf/myapp:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
